--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.24.3
-pandas==2.0.3
-yfinance==0.2.28
-streamlit==1.28.0
-plotly==5.17.0
+numpy>=1.26.0
+pandas>=2.0.0
+yfinance>=0.2.40
+streamlit>=1.28.0
+plotly>=5.17.0
